--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Document 2</title>
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <style>
         @import "style/style.scss";
-      </style>
+    </style>
 </head>
 <body>
     <div id="app"></div>
     <script type="module">
         import value from "./index.js";
-        console.log(value);
-      </script>
+    </script>
 </body>
 </html>
